# cowboy_vs_ninja_b

./: CMakeLists.txt  Demo.cpp  StudentTest1.cpp
sources/: Character.cpp  Character.hpp  Cowboy.cpp  Cowboy.hpp  Ninja.cpp  Ninja.hpp  OldNinja.cpp  OldNinja.hpp  Point.cpp  Point.hpp  SmartTeam.cpp  SmartTeam.hpp  Team.cpp  Team.hpp  Team2.cpp  Team2.hpp  TrainedNinja.cpp  TrainedNinja.hpp  YoungNinja.cpp  YoungNinja.hpp
